--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinkgoose</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Pinkgoose Tobi Leerjaar 1.2</title>
 </head>
+
 <body>
     <header>
-        <h1>Welcome to Pinkgoose</h1>
+        <img id="pinkgoose-logo" src="/images/pinkgoose.png" alt="Pinkgoose Logo">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Learn</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Contact</a></li>
+        </ul>
+        <div id="login-button" class="bold-text margin">
+            login
+        </div>
     </header>
+    <main>
+    </main>
 </body>
+
 </html>
